config/envoy/hr.yaml
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  # Entrypoint for service through Envoy
                  address: 0.0.0.0
                  port_value: 9999
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          codec_type: auto
                          http2_protocol_options: {}
                          stat_prefix: ingress_http
                          route_config:
                              virtual_hosts:
                                  - name: service
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/geo.Geo/"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: geo
                                        - match:
                                              prefix: "/rate.Rate/"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: rate
                                        - match:
                                              prefix: "/search.Search/"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: search
                                        - match:
                                              prefix: "/recommendation.Recommendation/"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: recommendation
                                        - match:
                                              prefix: "/reservation.Reservation/"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: reservation
                                        - match:
                                              prefix: "/profile.Profile/"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: profile

    clusters:
        - name: profile
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: profile
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.4
                                      port_value: 9999
        - name: search
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: search
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.5
                                      port_value: 9999
        - name: geo
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: geo
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.6
                                      port_value: 9999
        - name: rate
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: rate
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.7
                                      port_value: 9999
        - name: review
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: review
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.8
                                      port_value: 9999
        - name: attractions
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: attractions
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.10
                                      port_value: 9999
        - name: recommendation
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: recommendation
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.11
                                      port_value: 9999
        - name: user
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.12
                                      port_value: 9999
        - name: reservation
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          http2_protocol_options: {}
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: reservation
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.13
                                      port_value: 9999
